--- a/ecommerce/store/templates/store/store.html
+++ b/ecommerce/store/templates/store/store.html
@@ -1,3 +1,7 @@
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
-<h3>Store</h3>
+{% extends 'store/main.html' %}
+{% load static %}
+{% block content %}
+     <h3>Store</h3>
+{% endblock content %}
+
