--- a/ecommerce/store/templates/store/checkout.html
+++ b/ecommerce/store/templates/store/checkout.html
@@ -14,7 +14,7 @@
 						</div>
 					</div>
 
-					<div id="shipping-info">
+					<div id ="shipping-info">
 						<hr>
 						<p>Shipping Information:</p>
 						<hr>
@@ -31,7 +31,7 @@
 							<input class="form-control" type="text" name="zipcode" placeholder="Zip code..">
 						</div>
 						<div class="form-field">
-							<input class="form-control" type="text" name="country" placeholder="Zip code..">
+							<input class="form-control" type="text" name="country" placeholder="Country..">
 						</div>
 					</div>
 
@@ -43,6 +43,8 @@
 			<br>
 			<div class="box-element hidden" id="payment-info">
 				<small>Paypal Options</small>
+				<button id="make-payment">Make payment</button>
+
 			</div>
 
 		</div>
@@ -66,4 +68,29 @@
 			</div>
 		</div>
 	</div>
+<script type="text/javascript">
+		var shipping = '{{order.shipping}}'
+
+		if (shipping == 'False'){
+		 	document.getElementById('shipping-info').innerHTML = ''
+
+		}
+		var form = document.getElementById('form')
+		form.addEventListener('submit', function(e){
+	    	e.preventDefault()
+	    	console.log('Form Submitted...')
+	    	document.getElementById('form-button').classList.add("hidden");
+	    	document.getElementById('payment-info').classList.remove("hidden");
+	    })
+		 document.getElementById('make-payment').addEventListener('click', function(e){
+	    	submitFormData()
+	    })
+
+
+	    function submitFormData() {
+			console.log('Payment button clicked')
+		}
+
+
+		</script>
 {% endblock content %}
