--- a/ecommerce/account/templates/registration/register.html
+++ b/ecommerce/account/templates/registration/register.html
@@ -28,9 +28,9 @@
                 <div class="mb-3"><input class="form-control" type="password" name="password" placeholder="Password"></div>
                 <div class="mb-3"><input class="form-control" type="password" name="password-repeat" placeholder="Password (repeat)"></div>
                 <div class="mb-3">
-                    <div class="form-check"><label class="form-check-label"><input class="form-check-input" type="checkbox">I agree to the license terms.</label></div>
+                    <div class="form-check"><label class="form-check-label"><input class="form-check-input" type="checkbox" id="agreement_check">I agree to the license terms.</label></div>
                 </div>
-                <div class="mb-3"><button class="btn btn-primary d-block w-100" type="submit">Sign Up</button>
+                <div class="mb-3"><button class="btn btn-primary d-block w-100" type="submit" id="submit_button">Sign Up</button>
                 </div>
                 <a class="already" href="../login">You already have an account? Login here.</a>
                 <br> {% if messages %} {% for message in messages %}
@@ -40,6 +40,8 @@
         </div>
     </section>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'js/register.js' %}"></script>
 </body>
 
 </html>
