--- a/ecommerce/store/templates/store/main.html
+++ b/ecommerce/store/templates/store/main.html
@@ -49,7 +49,7 @@
             <div class="form-inline my-2 my-lg-0">
                 {% if user.is_authenticated %}
                 <a href="account/logout" class="btn btn-danger">Logout</a> {% else %}
-                <a href="account/login" class="btn btn-success">Login</a> &nbsp;&nbsp;
+                <a href="account/login" class="btn btn-info">Login</a> &nbsp;&nbsp;
                 <a href="account/register" class="btn btn-success">Register</a> {% endif %}
 
                 <a href="{% url 'cart' %}">
